syntax = "proto3";

package address_v1;

option go_package = "app/infrastructure/persistence/grpc/dto/v1/address";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service AddressHandler {
  rpc GetAddressByTerm (TermRequest) returns (AddressListResponse) {
    option (google.api.http) = {
      get: "/api/v1/address/term"
    };
  }
  rpc GetAddressByPostal (TermRequest) returns (AddressListResponse) {
    option (google.api.http) = {
      get: "/api/v1/address/postal/{term}"
    };
  }
  rpc GetByGuid (GuidRequest) returns (Address) {
    option (google.api.http) = {
      get: "/api/v1/address/{guid}"
    };
  };
  rpc GetAllCities (google.protobuf.Empty) returns (AddressListResponse) {
    option (google.api.http) = {
      get: "/api/v1/cities"
    };
  }
  rpc GetCitiesByTerm (TermRequest) returns (AddressListResponse) {
    option (google.api.http) = {
      get: "/api/v1/cities/term"
    };
  }
  rpc GetSuggests (SimpleTerm) returns (AddressListResponse) {
    option (google.api.http) = {
      get: "/api/v1/suggests"
    };
  }
}

message GuidRequest{
  string guid = 1;
}

message TermRequest{
  string term = 1;
  int64 size = 2;
  int64 from = 3;
}

message SimpleTerm{
  string term = 1;
  int64 size = 2;
}

message AddressListResponse {
  repeated Address items = 1;
}

message Address {
  string ID = 1;
  string FiasId = 2;
  string FiasLevel = 3;
  string ParentFiasId = 4;
  string ShortName = 5;
  string FormalName = 6;
  string PostalCode = 7;
  string FullName = 8;
  string FullAddress = 9;
  string KladrId = 10;
  string RegionFiasId = 11;
  string RegionKladrId = 12;
  string Region = 13;
  string RegionType = 14;
  string RegionFull = 15;
  string AreaFiasId = 16;
  string AreaKladrId = 17;
  string Area = 18;
  string AreaType = 19;
  string AreaFull = 20;
  string CityFiasId = 21;
  string CityKladrId = 22;
  string City = 23;
  string CityType = 24;
  string CityFull = 25;
  string SettlementFiasId = 26;
  string SettlementKladrId = 27;
  string Settlement = 28;
  string SettlementType = 29;
  string SettlementFull = 30;
  string StreetFiasId = 31;
  string StreetKladrId = 32;
  string Street = 33;
  string StreetType = 34;
  string StreetFull = 35;
  string HouseFiasId = 36;
  string HouseKladrId = 37;
  string House = 38;
  string HouseType = 39;
  string HouseFull = 40;
  float GeoLat = 41;
  float GeoLon = 42;
  string Okato = 43;
  string Oktmo = 44;
  string UpdatedDate = 45;
}